[gd_scene load_steps=3 format=3 uid="uid://dc7ym1pqb17mg"]

[ext_resource type="Script" path="res://addons/dialogue_editor/scenes/dialogues/nodes_view/nodes/node_sentence/NodeSentence.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cr1hvm6iy8dxl" path="res://addons/dialogue_editor/icons/Actor.png" id="2_ba4ph"]

[node name="NodeSentence" type="GraphNode"]
offset_right = 142.0
offset_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("2")

[node name="PanelScene" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="PanelScene"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelScene/HBox"]
layout_mode = 2
text = "Scene"

[node name="Scene" type="OptionButton" parent="PanelScene/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelActor" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="PanelActor"]
layout_mode = 2

[node name="Add" type="Button" parent="PanelActor/HBox"]
layout_mode = 2
text = "+"

[node name="Label" type="Label" parent="PanelActor/HBox"]
layout_mode = 2
text = "Actor"

[node name="Actor" type="OptionButton" parent="PanelActor/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelTexture" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxTexture" type="HBoxContainer" parent="PanelTexture"]
layout_mode = 2

[node name="View" type="CheckBox" parent="PanelTexture/HBoxTexture"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelTexture/HBoxTexture"]
layout_mode = 2
text = "Texture"

[node name="Texture" type="OptionButton" parent="PanelTexture/HBoxTexture"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 2

[node name="Texture" type="TextureRect" parent="Center"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_ba4ph")
expand_mode = 1
